# lem-in

./: CMakeLists.txt  Makefile  README.md  author  bad.txt  lem-in  map  map.txt  path.txt  testtt  valgrd
ft_printf/: Makefile
ft_printf/includes/: ft_printf.h
ft_printf/libft/: Makefile  ft_atoi.c  ft_atoi_base.c  ft_atoi_int_max.c  ft_bzero.c  ft_check_space.c  ft_clear_table.c  ft_countwords.c  ft_div_mod.c  ft_free.c  ft_is_minus_inf.c  ft_is_whitespaces.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isinf.c  ft_isnan.c  ft_isprint.c  ft_itoa.c  ft_lltoa.c  ft_llutoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_num_to_str.c  ft_numlen.c  ft_pow.c  ft_pow_double.c  (+53 more)
ft_printf/src/: check_is.c  fill_final.c  fill_find_other.c  fill_new_str.c  find_mod.c  find_str_size.c  float_maker.c  float_new_free.c  float_put.c  floats.c  ft_printf.c  parse_format.c  pf_format.c  pf_free.c  pf_libft.c  print_check.c
includes/: lem-in.h  lem_in.h
lem-in.dSYM/Contents/Resources/DWARF/: lem-in
src/: aux.c  begin_delete.c  check.c  counts_links.c  edmonds-karp.c  edmonds_karp.c  edmonds_karp_p2.c  error.c  form_paths.c  free_funcs.c  get_room.c  init.c  lem-in.c  lem_in.c  many_dashes_link.c  map.c  move_ants.c  path_funcs.c  queue_funcs.c  start_algo.c  turn_funcs.c  validation.c
